# mvp-vision-ai-platform

./: .gitignore  .railwayignore  CLAUDE.md  README.md  dev-start.ps1  docker-compose.yml
.claude/commands/: docs.md
.github/workflows/: upload-schemas.yml
docs/: CONVERSATION_LOG.md  E2E_TEST_GUIDE.md  MODEL_CAPABILITIES_SYSTEM.md  README.md  SESSION_2025-11-14_FRONTEND_DIAGNOSTICS.md
docs/guide/: README.md
docs/planning/: MVP_TO_PLATFORM_CHECKLIST.md  PHASE_3_6_EXPORT_DEPLOYMENT_PLAN.md  TRAINER_MARKETPLACE_VISION.md
docs/todo/: BACKEND_REFACTORING_PLAN.md  IMPLEMENTATION_TO_DO_LIST.md
mvp/: .gitignore  README.md
mvp/backend/: .env.example  Dockerfile  Dockerfile.k8s  create_admin.py  init_db.py  requirements.txt  start.sh
mvp/docker/: Dockerfile.timm  Dockerfile.ultralytics
mvp/docs/: README.md  UX_FLOW.md
mvp/frontend/: next.config.js
mvp/k8s/: MONITORING_INTEGRATION.md  QUICKSTART.md  README.md  setup.ps1  setup.sh
platform/: README.md
platform/backend/: .env.example  README.md  init_db.py  pyproject.toml
platform/backend/app/: __init__.py  config.py  main.py
platform/backend/app/api/: export.py  projects.py  test_inference.py  training.py  validation.py
platform/backend/app/core/: config.py
platform/backend/app/db/: models.py  session.py
platform/backend/app/schemas/: export.py  training.py  validation.py
platform/backend/app/services/: mlflow_service.py
platform/backend/app/utils/: s3_storage.py  training_subprocess.py
platform/backend/app/workflows/: training_workflow.py
platform/backend/scripts/setup/: create_admin.py
(+175 files in other folders)
